# pdf_exploder

./: .gitignore  Cargo.toml  Pextractor.postman_collection.json  README.md  RustIGEN.postman_collection.json
api/: Cargo.toml
api/src/: main.rs
azure_fn/: .dockerignore  Cargo.toml  Dockerfile
azure_fn/src/: main.rs
azure_fn/src/functions/: convert.rs  mod.rs
lambda/: Cargo.toml
lambda/src/: main.rs
presentation/: Cargo.toml
presentation/src/: lib.rs
src/: main.rs
src/pdf/: mod.rs
