[package]
name = "pdf_exploder"
version = "0.0.1"
authors = ["Omid Mottaghi Rad <omidmr@gmail.com>"]

[dependencies]
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
rand = "0.4"
multipart = "0.13"

[lib]
name = "pdf"
path = "src/lib.rs"

[[bin]]
name = "pdf_exploder"
path = "src/main.rs"
doc = false
