[package]
name = "pdf_exploder"
version = "0.0.1"
authors = ["Omid Mottaghi Rad <omidmr@gmail.com>", "Leon Marzahn <leon.marzahn@movingimage.com"]

[dependencies]
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
rand = "0.4"
multipart = "0.13"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[lib]
name = "pdf"
path = "src/lib.rs"

[[bin]]
name = "pdf_exploder"
path = "src/main.rs"
doc = false
